unpackaged/main/default/objects/Service_Appointment_Status_Location__c/Service_Appointment_Status_Location__c.object-meta.xml
<CustomObject>
    <label>Service Appointment Status Location</label>
    <nameField>
        <label>Service Appointment Status Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Appointment Status Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>