unpackaged/main/default/objects/Service_Appointment_Status_Location__c/fields/End_States__c.field-meta.xml
<CustomField>
    <fullName>End_States__c</fullName>
    <label>End States</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ER - Cancelled_Cleared</fullName>
                <label>ER - Cancelled_Clear</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>