unpackaged/main/default/objects/Service_Appointment_Status_Location__c/fields/From_Longitude__c.field-meta.xml
<CustomField>
    <fullName>From_Longitude__c</fullName>
    <label>From Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>