unpackaged/main/default/objects/Service_Appointment_Status_Location__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <label>Service Appointment</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>