unpackaged/main/default/objects/Service_Appointment_Status_Location__c/fields/To_Latitude__c.field-meta.xml
<CustomField>
    <fullName>To_Latitude__c</fullName>
    <label>To Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>