unpackaged/main/default/objects/Service_Appointment_Status_Location__c/fields/To_Longitude__c.field-meta.xml
<CustomField>
    <fullName>To_Longitude__c</fullName>
    <label>To Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>