unpackaged/main/default/objects/Service_Appointment_Status_Location__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>